--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "extract-translations": "i18next -c i18n-parser.config.js --fail-on-warnings"
   },
   "dependencies": {
     "@chakra-ui/next-js": "^2.2.0",
@@ -14,10 +15,14 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "framer-motion": "^10.16.16",
+    "i18next": "^23.11.5",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.5.2",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
+    "react-i18next": "^14.1.2",
     "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.5.3",
     "react-multi-carousel": "^2.8.4",
