--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,44 +8,18 @@
     "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@/assets/*": [
-        "src/assets/*"
-      ],
-      "@/modules/*": [
-        "src/modules/*"
-      ],
-      "@/components/*": [
-        "src/components/*"
-      ],
-      "@/constants/*": [
-        "src/constants/*"
-      ],
-      "@/lib/*": [
-        "src/lib/*"
-      ],
-      "@/theme/*": [
-        "src/theme/*"
-      ],
-      "@/types/*": [
-        "src/types/*"
-      ],
-      "@/hooks/*": [
-        "src/hooks/*"
-      ],
-      "@/stores/*": [
-        "src/stores/*"
-      ],
-      "@/services/*": [
-        "src/services/*"
-      ]
+      "@/assets/*": ["src/assets/*"],
+      "@/modules/*": ["src/modules/*"],
+      "@/components/*": ["src/components/*"],
+      "@/constants/*": ["src/constants/*"],
+      "@/lib/*": ["src/lib/*"],
+      "@/theme/*": ["src/theme/*"],
+      "@/types/*": ["src/types/*"],
+      "@/hooks/*": ["src/hooks/*"],
+      "@/stores/*": ["src/stores/*"],
+      "@/services/*": ["src/services/*"]
     },
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext",
-      "es5",
-      "es6"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext", "es5", "es6"],
     "allowJs": true,
     "noEmit": true,
     "incremental": true,
@@ -64,9 +38,9 @@
     "**/*.ts",
     "**/*.tsx",
     "src/components/Meta/Meta.ts",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "i18n-parser.config.js",
+    "src/app/i18n.js"
   ],
-  "exclude": [
-    "node_modules"
-  ]
+  "exclude": ["node_modules"]
 }
