--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "panda cat",
   "version": "0.1.0",
   "private": true,
+  "keywords": [
+    "canvas",
+    "react",
+    "konva"
+  ],
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -20,12 +25,15 @@
     "i18next-http-backend": "^2.5.2",
     "next": "14.0.4",
     "react": "^18",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-i18next": "^14.1.2",
     "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.5.3",
     "react-multi-carousel": "^2.8.4",
+    "react-rnd": "^10.4.11",
     "react-scroll": "^1.9.0"
   },
   "devDependencies": {
