--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
-  "name": "panda cat",
+  "name": "pandacat",
   "version": "0.1.0",
   "private": true,
   "keywords": [
-    "canvas",
-    "react",
-    "konva"
+    "react"
   ],
   "scripts": {
     "dev": "next dev",
@@ -17,32 +15,48 @@
   "dependencies": {
     "@chakra-ui/next-js": "^2.2.0",
     "@chakra-ui/react": "^2.8.2",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "framer-motion": "^10.16.16",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "framer-motion": "^10.18.0",
     "i18next": "^23.11.5",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-http-backend": "^2.5.2",
-    "next": "14.0.4",
-    "react": "^18",
+    "next": "^14.1.0",
+    "react": "^18.3.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-i18next": "^14.1.2",
     "react-icons": "^4.12.0",
-    "react-intersection-observer": "^9.5.3",
-    "react-multi-carousel": "^2.8.4",
+    "react-intersection-observer": "^9.10.2",
     "react-rnd": "^10.4.11",
-    "react-scroll": "^1.9.0"
+    "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/node": "^20.12.12",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@types/react-scroll": "^1.8.10",
-    "eslint": "^8",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.0.4",
-    "typescript": "^5"
+    "typescript": "^5.4.5"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
